# Rename-Academic-PDF

./: .gitignore  LICENSE  MANIFEST.in  README.md  journal_abbreviations.json  pyproject.toml  requirements.txt
.github/: FUNDING.yml
rename_academic_pdf/: __init__.py  __main__.py  core.py  llm_extract.py
rename_academic_pdf/data/: journal_abbreviations.json
